Fixes in the Content Wizard toolbar: increased spacing, changed color of background and icons (#1794)

--- a/src/main/resources/assets/styles/themes.less
+++ b/src/main/resources/assets/styles/themes.less
@@ -12,7 +12,7 @@
   @HEADER_FONT_COLOR_HOVER: @admin-black;
   @HEADER_ICON_COLOR: @admin-font-gray3;
   @HEADER_ICON_COLOR_HOVER: @admin-black;
-  @ACTION_TOOLBAR_BG_COLOR:@admin-bg-toolbar;
+  @ACTION_TOOLBAR_BG_COLOR: @admin-bg-toolbar;
   @TOOLBAR_BG_COLOR: @admin-white;
 }
 
@@ -238,17 +238,12 @@
       background-color: @ACTION_TOOLBAR_BG_COLOR;
 
       > .@{_COMMON_PREFIX}button:not(:disabled) {
-        &::before, span {
+        span, &:hover span {
           color: @HEADER_FONT_COLOR;
-        }
-
-        &:hover {
-          &::before, span {
-            color: @HEADER_FONT_COLOR_HOVER;
-          }
         }
       }
     }
+
     .context-panel .context-panel-view {
       .non-mobile-details-panel-toggle-button {
         background-color: @ACTION_TOOLBAR_BG_COLOR;
@@ -277,6 +272,13 @@
         }
       }
       .wizard-step-navigator-and-toolbar {
+
+        background-color: @ACTION_TOOLBAR_BG_COLOR;
+
+        .wizard-step-navigator .tab-bar-item.active:before {
+          border-left-color: @ACTION_TOOLBAR_BG_COLOR;
+        }
+
         .edit-permissions-button, .tab-bar-item {
 
           color: @HEADER_FONT_COLOR;
@@ -294,21 +296,16 @@
           }
         }
       }
-      .context-panel .context-panel-view {
-        .non-mobile-details-panel-toggle-button {
+
+      .minimized {
+        .wizard-step-navigator {
           background-color: @ACTION_TOOLBAR_BG_COLOR;
-
-          &::before {
-            color: @HEADER_FONT_COLOR;
-          }
-
-          &:hover:not(:disabled) {
-            background-color: @ACTION_TOOLBAR_BG_COLOR;
-            &::before {
-              color: @HEADER_FONT_COLOR_HOVER;
-            }
-          }
         }
+      }
+
+      .application-configurator .selected-options .selected-option:not(.placeholder):not(.invalid),
+      .panel-strip .panel-strip-panel-header.disabled {
+        background-color: @ACTION_TOOLBAR_BG_COLOR;
       }
     }
   }
